--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>be.bendem.OreBroadcast</groupId>
     <artifactId>OreBroadcast</artifactId>
-    <version>1.2.2</version>
+    <version>1.3.4-b${build.number}</version>
     <packaging>jar</packaging>
 
     <name>OreBroadcast</name>
@@ -12,6 +12,8 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <bukkit.version>1.11</bukkit.version>
+        <build.number>SNAPSHOT</build.number>
     </properties>
 
     <developers>
@@ -30,17 +32,18 @@
     </developers>
 
     <repositories>
+        <!-- For anything else without its own repo -->
         <repository>
-            <id>bukkit-repo</id>
-            <url>http://repo.bukkit.org/content/groups/public</url>
+            <id>cnaude-repo</id>
+            <url>http://cnaude.org/repo/</url>
         </repository>
     </repositories>
 
     <dependencies>
         <dependency>
             <groupId>org.bukkit</groupId>
-            <artifactId>bukkit</artifactId>
-            <version>1.7.2-R0.3</version>
+            <artifactId>spigot-api</artifactId>
+            <version>${bukkit.version}</version>
             <type>jar</type>
             <scope>provided</scope>
         </dependency>
